server y front unuidos y ciomunicandose. ayuda por favor, mi sanidad mental esta muerta y necesito ayuda por favor

--- a/python shenanigans/python back.ipynb
+++ b/python shenanigans/python back.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "id": "cecaf891",
    "metadata": {},
    "outputs": [
@@ -10,153 +10,111 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         genero                  determinante_electivas  \\\n",
-      "0      Femenino      Por cursar electivas profesionales   \n",
-      "1      Femenino        Cursando electivas profesionales   \n",
-      "2     Masculino      Por cursar electivas profesionales   \n",
-      "3   No binarie   Ya termine mis electivas profesionales   \n",
-      "4    Masculino         Cursando electivas profesionales   \n",
-      "..          ...                                     ...   \n",
-      "74    Masculino      Por cursar electivas profesionales   \n",
-      "75     Femenino      Por cursar electivas profesionales   \n",
-      "76    Masculino        Cursando electivas profesionales   \n",
-      "77     Femenino  Ya termine mis electivas profesionales   \n",
-      "78    Masculino      Por cursar electivas profesionales   \n",
-      "\n",
-      "                                    first_electiva  first_general_rating  \\\n",
-      "0                                              NaN                   NaN   \n",
-      "1   Creación de experiencias para realidades VR-AR                   4.0   \n",
-      "2                                              NaN                   NaN   \n",
-      "3                          Innovación en servicios                   3.0   \n",
-      "4                               Analítica de datos                   2.0   \n",
-      "..                                             ...                   ...   \n",
-      "74                                             NaN                   NaN   \n",
-      "75                                             NaN                   NaN   \n",
-      "76               Investigación de usuarios para UX                   4.0   \n",
-      "77                                        Branding                   5.0   \n",
-      "78                                             NaN                   NaN   \n",
-      "\n",
-      "    first_rec_rating  first_time_rating  first_personalGrowth_rating  \\\n",
-      "0                NaN                NaN                          NaN   \n",
-      "1                3.0                2.0                          4.0   \n",
-      "2                NaN                NaN                          NaN   \n",
-      "3                2.0                4.0                          3.0   \n",
-      "4                1.0                4.0                          4.0   \n",
-      "..               ...                ...                          ...   \n",
-      "74               NaN                NaN                          NaN   \n",
-      "75               NaN                NaN                          NaN   \n",
-      "76               5.0                5.0                          4.0   \n",
-      "77               4.0                4.0                          4.0   \n",
-      "78               NaN                NaN                          NaN   \n",
-      "\n",
-      "    first_teacher_rating  first_method_rating             second_electiva  \\\n",
-      "0                    NaN                  NaN                         NaN   \n",
-      "1                    4.0                  5.0                          No   \n",
-      "2                    NaN                  NaN                         NaN   \n",
-      "3                    4.0                  3.0  Postproducción fotográfica   \n",
-      "4                    5.0                  1.0                          No   \n",
-      "..                   ...                  ...                         ...   \n",
-      "74                   NaN                  NaN                         NaN   \n",
-      "75                   NaN                  NaN                         NaN   \n",
-      "76                   5.0                  5.0                          No   \n",
-      "77                   4.0                  4.0  Postproducción fotográfica   \n",
-      "78                   NaN                  NaN                         NaN   \n",
-      "\n",
-      "    ...  third_general_rating  third_rec_rating  third_time_rating  \\\n",
-      "0   ...                   NaN               NaN                NaN   \n",
-      "1   ...                   NaN               NaN                NaN   \n",
-      "2   ...                   NaN               NaN                NaN   \n",
-      "3   ...                   5.0               5.0                5.0   \n",
-      "4   ...                   NaN               NaN                NaN   \n",
-      "..  ...                   ...               ...                ...   \n",
-      "74  ...                   NaN               NaN                NaN   \n",
-      "75  ...                   NaN               NaN                NaN   \n",
-      "76  ...                   NaN               NaN                NaN   \n",
-      "77  ...                   4.0               5.0                5.0   \n",
-      "78  ...                   NaN               NaN                NaN   \n",
-      "\n",
-      "    third_personalGrowth_rating  third_teacher_rating  third_method_rating  \\\n",
-      "0                           NaN                   NaN                  NaN   \n",
-      "1                           NaN                   NaN                  NaN   \n",
-      "2                           NaN                   NaN                  NaN   \n",
-      "3                           5.0                   5.0                  5.0   \n",
-      "4                           NaN                   NaN                  NaN   \n",
-      "..                          ...                   ...                  ...   \n",
-      "74                          NaN                   NaN                  NaN   \n",
-      "75                          NaN                   NaN                  NaN   \n",
-      "76                          NaN                   NaN                  NaN   \n",
-      "77                          5.0                   5.0                  5.0   \n",
-      "78                          NaN                   NaN                  NaN   \n",
-      "\n",
-      "                                           preference  \\\n",
-      "0                                                 NaN   \n",
-      "1   Semipresencial (combinación de presencial y en...   \n",
-      "2                                                 NaN   \n",
-      "3                                No tengo preferencia   \n",
-      "4                             Presencial en el campus   \n",
-      "..                                                ...   \n",
-      "74                                                NaN   \n",
-      "75                                                NaN   \n",
-      "76  Semipresencial (combinación de presencial y en...   \n",
-      "77                            Presencial en el campus   \n",
-      "78                                                NaN   \n",
-      "\n",
-      "                                     positive_aspects  \\\n",
-      "0                                                 NaN   \n",
-      "1   Contenido del curso, Recursos y materiales de ...   \n",
-      "2                                                 NaN   \n",
-      "3   Contenido del curso, Recursos y materiales de ...   \n",
-      "4   Calidad de los profesores, Recursos y material...   \n",
-      "..                                                ...   \n",
-      "74                                                NaN   \n",
-      "75                                                NaN   \n",
-      "76     Calidad de los profesores, Contenido del curso   \n",
-      "77  Calidad de los profesores, Contenido del curso...   \n",
-      "78                                                NaN   \n",
-      "\n",
-      "                                       recomendations  \\\n",
-      "0                                                 NaN   \n",
-      "1                                                 NaN   \n",
-      "2                                                 NaN   \n",
-      "3                                                 NaN   \n",
-      "4                                                 NaN   \n",
-      "..                                                ...   \n",
-      "74                                                NaN   \n",
-      "75                                                NaN   \n",
-      "76  En investigación UX, falta una manera de pract...   \n",
-      "77                                    Post-producción   \n",
-      "78                                                NaN   \n",
-      "\n",
-      "                                    personal interest  \n",
-      "0   Interés personal, Recomendación de otros estud...  \n",
-      "1                                                 NaN  \n",
-      "2   Interés personal, Recomendación de otros estud...  \n",
-      "3                                                 NaN  \n",
-      "4                                                 NaN  \n",
-      "..                                                ...  \n",
-      "74                                   Interés personal  \n",
-      "75  Interés personal, Recomendación de otros estud...  \n",
-      "76                                                NaN  \n",
-      "77                                                NaN  \n",
-      "78  Interés personal, Recomendación de otros estud...  \n",
-      "\n",
-      "[79 rows x 27 columns]\n"
+      "                                        class_name        day       modal\n",
+      "0            Administración de empresas familiares     martes  presencial\n",
+      "1                               Analítica de datos     jueves  presencial\n",
+      "2                             Aplicaciones móviles      lunes  presencial\n",
+      "3                       Comunicaciones gerenciales     jueves  presencial\n",
+      "4   Creación de experiencias para realidades VR-AR      lunes  presencial\n",
+      "5                         Estrategia de innovación    viernes  presencial\n",
+      "6      Finanzas personales para nuevos empresarios      lunes  presencial\n",
+      "7                         Habilidades de dirección     martes  presencial\n",
+      "8                 Innovación en modelos de negocio  miercoles  presencial\n",
+      "9                 Innovación en modelos de negocio     jueves  presencial\n",
+      "10                         Innovación en servicios      lunes  presencial\n",
+      "11                           Internet de las cosas    viernes  presencial\n",
+      "12               Investigación de usuarios para UX     martes     virtual\n",
+      "13                             Marketing sensorial  miercoles  presencial\n",
+      "14                             Marketing sensorial     martes  presencial\n",
+      "15                      Postproducción fotográfica  miercoles  presencial\n",
+      "16     Strategic pitch and effective presentations      lunes  presencial\n",
+      "17                                    Web avanzada     martes     virtual\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
     "import pandas as pd\n",
-    "db = pd.read_excel(\"database.xlsx\")\n",
     "import firebase_admin\n",
-    "from firebase_admin import credentials, firestore\n",
-    "print(db)"
+    "from firebase_admin import credentials, db\n",
+    "\n",
+    "if not firebase_admin._apps:\n",
+    "    \n",
+    "    cred = credentials.Certificate('nope.json')\n",
+    "    firebase_admin.initialize_app(cred, {\n",
+    "        'databaseURL': 'https://sistema-rec-dmi-default-rtdb.firebaseio.com/'\n",
+    "    })\n",
+    "ref = db.reference('/base_materias') \n",
+    "\n",
+    "datos_firebase = ref.get()\n",
+    "\n",
+    "df_firebase = pd.DataFrame(datos_firebase)\n",
+    "\n",
+    "print(df_firebase)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "f96ce3a3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:5000\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [23/Nov/2023 01:13:08] \"OPTIONS /rec-dmi HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [23/Nov/2023 01:13:08] \"POST /rec-dmi HTTP/1.1\" 200 -\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'prefer': 'ui', 'day': 'lunes', 'modal': 'presencial'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from flask import Flask, request, jsonify\n",
+    "from flask_cors import CORS\n",
+    "\n",
+    "app = Flask(__name__)\n",
+    "CORS(app)\n",
+    "\n",
+    "@app.route('/rec-dmi', methods=['POST'])\n",
+    "def recibir_datos():\n",
+    "    datos_recibidos = request.json  \n",
+    "    print(datos_recibidos)\n",
+    "    respuesta = {'mensaje': 'Datos recibidos correctamente'}\n",
+    "    return jsonify(respuesta)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run(port=5000) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f96ce3a3",
+   "id": "c34ec28c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "76231495",
    "metadata": {},
    "outputs": [],
    "source": []
